# STM32Core

./: .gitignore  CMakeLists.txt  README.md
ADC/DMA/: ADC_DMA.c  CMakeLists.txt
ADC/DMA/example/: example_continuous_conversion.c  example_software_conversion.c  example_tim_trigger.c
ADC/DMA/include/: ADC_DMA.h
ADC/IT/: ADC_IT.c  CMakeLists.txt
ADC/IT/example/: example_injected_manual.c  example_injected_manual_scan.c  example_injected_tim_trigger.c  example_regular.c
ADC/IT/include/: ADC_IT.h
ADC/Polling/: ADC_Polling.c  CMakeLists.txt
ADC/Polling/example/: example_injected.c  example_regular.c
DMA/: DMAUtils.c
I2C/: I2CBase.h
I2C/DMA/: CMakeLists.txt  I2C_DMA.c
I2C/DMA/include/: I2C_DMA.h
I2C/IT/: CMakeLists.txt  I2C_IT.c
I2C/IT/include/: I2C_IT.h
I2C/Polling/: CMakeLists.txt  I2C_Polling.c
I2C/Polling/example/: example.c
I2C/Polling/include/: I2C_Polling.h
RTC/: CMakeLists.txt  RTC.c  RTC_LL.c
RTC/example/: main.c  stm32f4xx_it.c
RTC/include/: RTC_LL.h
SPI/DMA/: CMakeLists.txt  SPI_DMA.c
SPI/DMA/include/: SPI_DMA.h
SPI/IT/: CMakeLists.txt  SPI_IT.c
SPI/IT/include/: SPI_IT.h
SPI/Polling/: CMakeLists.txt  SPI_Polling.c
SPI/Polling/include/: SPI_Polling.h
STM32F4/ADC/: ADCBase.h
STM32F4/ADC/DMA/: ADC_DMA.c  ADC_DMA.h  CMakeLists.txt
STM32F4/ADC/IT/: ADC_IT.c  ADC_IT.h  CMakeLists.txt
STM32F4/ADC/IT/example/: example_injected_tim_scan.c
STM32F4/ADC/IT/include/: ADC_IT.h
STM32F4/ADC/Polling/: ADC.c  ADC.h  CMakeLists.txt
STM32F4/ADC/Polling/example/: example_injected_scan.c  example_regular.c  example_regular_manual_channel_select.c
STM32F4/DMA/: DMAUtils.h
USART/DMA/: CMakeLists.txt  USART_DMA.c
USART/DMA/example/: example.c  stm32f4xx_it.c
USART/DMA/include/: USART_DMA.h
USART/IT/: CMakeLists.txt  USART_IT.c
USART/IT/example/: example.c  stm32f4xx_it.c
USART/IT/include/: USART_IT.h
USART/Polling/: CMakeLists.txt  USART_Polling.c
USART/Polling/example/: example.c
USART/Polling/include/: USART_Polling.h
